# mcp-servers-collection

./: .gitignore  CHANGELOG.md  CONFIG_GUIDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TEST_RESULTS.md  fix-and-test.bat  fix-dependencies.md  git-push.bat  git-push.sh  install-deps.bat  install-deps.sh  package.json  push-fix.bat  setup-github.md  test-quick.js  test-servers.py
.github/workflows/: test.yml
mcp-server-huggingface/: .gitignore  EXAMPLES.md  README.md  USAGE.md  config.json  mcp_config_example.json  pyproject.toml  requirements.txt
mcp-server-huggingface/src/mcp_server_huggingface/: __init__.py  cli.py  server.py
mcp-server-huggingface/tests/: test_server.py
mcp-server-media/: .gitignore  BATCH_EXAMPLES.md  README.md  USAGE.md  config.json  package-lock.json  package.json
mcp-server-media/src/: index.js
mcp-server-media/tests/: server.test.js
mcp-server-obsidian/: .gitignore  DATAVIEW_EXAMPLES.md  README.md  USAGE.md  config.json  package-lock.json  package.json
mcp-server-obsidian/src/: index.js
mcp-server-obsidian/tests/: server.test.js
shared/: error-handler.js
